@@ -3,6 +3,8 @@
 - Update to LWJGL 3.2.3
 - API Change: Table#getRow now returns -1 when over the table but not over a row (used to return the last row).
 - API Change: Tree#addToTree and #removeFromTree now have an "int actorIndex" parameter.
+- API Change: Polyline#contains implemented (return true if point on one segment)
+- API Addition: Polyline#contains with approximation (return true if point is nearnest of approximation on one segment
 
 [1.9.10]
 - API Addition: Allow target display for maximization LWJGL3 backend
